add/user activity recomendations handler
